flashCard.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body{
    background: rgb(124,124,124);
    background: linear-gradient(180deg, rgba(124,124,124,1) 0%, rgba(40,58,66,1) 65%, rgba(34,35,36,1) 86%, rgba(34,35,36,1) 100%);
    font-family: 'Poppins', sans-serif;
    overflow-x: hidden;
}
body::-webkit-scrollbar{
    width: .25rem;
}
body::-webkit-scrollbar-track{
    background: darkgoldenrod;
}
body::-webkit-scrollbar-thumb{
    background: darkgoldenrod;
}
#main{
    width: 95vw;
    height: 50vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 2.5vh 2.5vw 5vh;
}
#card{
    height: 90%;
    width: 60%;
}
#loadingArea{
    position: absolute;
    left: 38%;
    top: 15%;
    width: 25vw;
    height: 20vh;
    background-color: aliceblue;
    display: flex;
    align-items: center;
    justify-content: center;
}


#addCard{
    margin-right: auto;
    font-family: 'Poppins', sans-serif;
}
#readCard{
    margin-left: auto;
    font-family: 'Poppins', sans-serif;
}
#searchDeck{
    font-family: 'Poppins', sans-serif;
    margin-bottom: .25rem;
    margin-left: .5rem;
}
#currentCardIndicator{
    font-family: 'Poppins', sans-serif;
    width: 75px;
    height: 29px;
    background-color: rgb(239, 239, 239);
    text-align: center;
    margin-bottom: .25rem;
    margin-right: .5rem;
}

#closeSearchDeck{
    align-self: flex-end;
}




#languages{
    width: 90%;
    height: 90%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    transform-style: preserve-3d;
    animation: spin 1s;
}
.languageOptions{
    width: 34%;
    height: 33%;
}
@keyframes spin {
    from{
        transform: rotateY(360deg) rotateX(90deg);
    }
    to{
        transform: rotateY(0deg) rotateX(0deg);
    }
}
.languageOptionsClicked{
    background-color: #8c8989;
    transform: scale(.8);
}







#currentCardCopy{
    width: 100%;
    min-height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #b8860e;
    margin-bottom: 1rem;
    color: white;
}



#newCardModal, #editCardModal, #searchDeckModal{
    position: absolute;
    top: 20vh;
    left: 15vw;
    display: none;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding: 20px;
    height: 50vh;
    min-height: fit-content;
    width: 70vw;
    border: 5px solid black;
    background-color: dimgrey;
    z-index: 1;
    border-radius: 5px;
    font-family: 'Poppins', sans-serif;
}

#newCardTitle, #newCardCategory, #newCardQuestion, #newCardAnswer, #editCardTitle, #editCardCategory, #editCardQuestion, #editCardAnswer{
    background: lightgrey;
}
#submitNewCard, #submitEditCard{
    position: absolute;
    bottom: 0;
    width: 100%;
    font-family: 'Poppins', sans-serif;
}
#hiddenID{
    display: none;
}

















#categoryOfCard{
    align-self: flex-start;
    font-family: 'Poppins', sans-serif;

}
#cardContent{
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #F7F7FF;
    color: black;
    height: 50%;
    width: 75%;
    justify-content: space-around;
}
#cardFunctions{
    width: 100%;
    display: flex;
}
h6{
    align-self: flex-start;
}
hr{
    height: 4px;
    width: 100%;
    background-color: blue;
}
#edit{
    width: fit-content;
    align-self: flex-end;
    margin-bottom: -1rem;
}





/*Buttons*/
#cycle{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 50%;
    margin-top: 3%;
    height: 12%;
}
.cycleThrough{
    background-color: whitesmoke;
    color: black;
    font-weight: bold;
    border-radius: 3px;
    border-color: goldenrod;
}
button:hover{
    cursor: pointer;
}
/*===========*/







/*====================*/
#finishedArea{
    width: 100vw;
    height: 115vh;
    display: flex;
    flex-direction: column;
    margin: 0 2.5%;
}
#completed{
    background-color: gray;
    margin-right: 2.5%;
}
#pinned{
    background-color: darkgray;
}
.storedCards{
    overflow: scroll;
    overflow-x: hidden;
    border-radius: 5px;
    width: 75%;
    height: 50%;
    margin: 15px 12.5%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.storedCards::-webkit-scrollbar{
    width: .25rem;
}
.storedCards::-webkit-scrollbar-track{
    background: darkgoldenrod;
}
.storedCards::-webkit-scrollbar-thumb{
    background: darkgoldenrod;
}

pre{

}







.flip-card {
    background-color: transparent;
    width: 100%;
    height: 350px;
    perspective: 1000px;
}

.flip-card-inner {
    position: relative;
    width: 100%;
    height: 350px;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
}

.flip-card-front, .flip-card-back {
    position: absolute;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 350px;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    box-shadow: -17px 14px 8px 0 rgba(0,0,0,0.2);
}

.flip-card-front {
    height: 350px;
    width: 100%;
    background-color: darkgoldenrod;
    color: white;
    border-radius: 5px;
    font-family: 'Poppins', sans-serif;
}

.flip-card-back {
    height: 350px;
    width: 100%;
    background-color: darkgoldenrod;
    color: white;
    transform: perspective(250px) rotateY(180deg);
    border-radius: 5px;
    font-family: 'Poppins', sans-serif;
}
.flip{
    transform: perspective(500px) rotateY(180deg);
}

@media screen and (min-width: 768px){
    #newCardModal, #editCardModal, #searchDeckModal{
        left: 25vw;
        min-height: fit-content;
        width: 50vw;
    }
    #finishedArea{
        flex-direction: row;
        height: 75vh;
    }
    .storedCards{
        width: 45%;
        margin: 0;
        height: 100%;
    }
    #pinned{
        margin-left: 2.5%;
    }
}

